# system-init

./: 01_history  10_lshw  99_init  Machines.md  README.md  hdd.info  init_new_machine  maps-ThinkCentre-M93p  pyproject.toml  setup_remote_machine  sh_guide.md  v20230306-v2004LTS  v20230308-v2204LTS  v20230310-v2204LTS
instances/: maps-Latitude-E7270  maps-Latitude-E7270-history-log  maps-ThinkCentre-M93p-hardware-log  maps-ThinkCentre-M93p-history-log  maps-ThinkCentre-M93p_500GB  mapserver-ThinkCentre-M93p  mapserver-ThinkCentre-M93p-history-log  mapserver-ThinkCentre-M93p-lshw.json  mapslabio-ThinkPad-X230  mapslabio-ThinkPad-X230-hardware-log  mapslabio-ThinkPad-X230-log  mapslabio-ThinkPad-X230-lshw.json  mapuser-ThinkPad-Edge-E540  mapuser-ThinkPad-Edge-E540-envs  mapuser-ThinkPad-Edge-E540-history-log  mapuser-ThinkPad-Edge-E540-lshw.json  neptune.2023.04.05  neptune.2023.04.05-history-log  neptune.2023.04.05-lshw.json  v20230308-v2204LTS  v20230310-v2204LTS  v20230310-v2204LTS-log  v20230310-v2204LTS-lshw.json
notebooks/: subprocess_poc.ipynb
scripts/: 01_setup_remote_machine  02_sys_init_script  10_setup_postgresql  20_setup_postgis
system_init/: get_hdd_info.py
